--- a/src/app/dbz/main-page/main-page.component.html
+++ b/src/app/dbz/main-page/main-page.component.html
@@ -3,34 +3,14 @@
 
 <div class="row">
   <div class="col">
-    <h3>Personajes</h3>
-    <hr>
-    <ul *ngFor="let personaje of personajes">
-      <li>{{personaje.nombre}} - {{personaje.poder}}</li>
-      
-    </ul>
+    <app-personajes [personajes]="personajes">
+    </app-personajes>
   </div>
   <div class="col">
-    <h3>Agregar</h3>
-    <hr>
-    <form (ngSubmit)="agregar()">
-      <input 
-        placeholder="Nombre" 
-        type="text"
-        name="nombre"
-        [(ngModel)]="nuevo.nombre"
-        >
-        
-        <!-- otra manera de hacerlo en vez de ngModel
-        [value]= "nuevo.nombre" 
-        (input)="cambiarNombre($event)" -->
-      <input 
-        placeholder="Poder" 
-        type="number"
-        name="poder"
-        [(ngModel)] = "nuevo.poder"  
-      >
-      <button type="submit">Agregar</button>
-    </form>
+    <app-agregar  
+      [personajes]="personajes"
+      [nuevo]="nuevo"
+    >
+    </app-agregar>
   </div>
 </div>
