add output functionality in add component

--- a/src/app/dbz/main-page/main-page.component.html
+++ b/src/app/dbz/main-page/main-page.component.html
@@ -7,10 +7,9 @@
     </app-personajes>
   </div>
   <div class="col">
-    <app-agregar  
-      [personajes]="personajes"
+    <app-agregar
       [nuevo]="nuevo"
-    >
-    </app-agregar>
+      (onNuevoPersonaje)="agregarNuevoPersonaje($event)"
+    ></app-agregar>
   </div>
 </div>
